fix overflow

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -117,7 +117,7 @@ h2 {
 #triangle-bottomright {
     width: 0;
     height: 0px;
-    border-bottom: 75px solid blue;
+    border-bottom: 75px solid rgb(255, 255, 255);
     border-left: 50vw solid transparent;
     position: absolute;
     margin-top: -73px;
